--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
         os: ['ubuntu-20.04', 'macos-latest', 'windows-latest']
         # os: ['windows-latest']
         # python-version: [3.5, 3.7, 3.8, 3.9]
-        obabel-version: [3.1.1 3.1.0 3.0.0 2.4.1]
+        obabel-version: [3.1.1 3.1.0 3.0.0]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
