--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,6 @@ jobs:
         os: ['ubuntu-20.04', 'macos-latest', 'windows-latest']
         # os: ['windows-latest']
         # python-version: [3.5, 3.7, 3.8, 3.9]
-        obabel-version: [3.1.1 3.1.0 3.0.0]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
@@ -26,12 +25,12 @@ jobs:
       - name: install and list packages
         shell: pwsh
         run: |
-          conda install -c conda-forge openbabel=${{ matrix.obabel-version }}
+          conda install -c conda-forge openbabel=3.1.0
           conda list
       - name: run test
         shell: pwsh
         run: |
-           python openbabel-smarts-tests.py --prefix ${{ matrix.os }}=${{ matrix.obabel-version }}
+           python openbabel-smarts-tests.py --prefix ${{ matrix.os }}=3.1.0
       - uses: actions/upload-artifact@v2
         with:
           name: outfiles
